--- a/todo/templates/todo/signupuser.html
+++ b/todo/templates/todo/signupuser.html
@@ -1,6 +1,19 @@
 {% extends 'todo/base.html' %}
 
 {% block content %}
+
+<!--we use a post method here so that the contents of the form is not visible from-->
+<!--the address bar. if it was get method it would be visible.-->
+<!--Also used a csrf_token to prevent any attacks. It is mandatory. Otherwise we will get an-->
+<!--error-->
 <h1> Login page </h1>
-{{ form.as_p }}
+{% if error_message %}
+    <h3>{{ error_message }}</h3>
+{% endif %}
+<form method="POST">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Sign up</button>
+</form>
+
 {% endblock %}
